--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dropdown-picker": "^5.4.3",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "expo-barcode-scanner": "~12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
